Fix missing border-radius specs.

--- a/to.etc.domui/src/resources/themes/blue/style.theme.css
+++ b/to.etc.domui/src/resources/themes/blue/style.theme.css
@@ -29,6 +29,8 @@ input, textarea, select {
 	border-style:solid;
 	border-width:1px;
 	-moz-border-radius: 2px;	
+	border-radius: 2px;	
+	-webkit-border-radius: 2px;	
 }
 
 input, textarea {
@@ -286,6 +288,8 @@ td.ui-tr-selected {
 .ui-chdr-ttl {
 	background-color: <%= util.color(header_bg).lighter(0.4) %>;
 	-moz-border-radius: 5px;
+	border-radius: 5px;
+	-webkit-border-radius: 5px;
 	padding: 2px 10px 2px 10px;
 	white-space: nowrap;
 }
@@ -333,6 +337,8 @@ div.ui-popin {
 	background-color: #b8e59d;
 	margin-top: 15px;
 	-moz-border-radius: 5px;
+	border-radius: 5px;
+	-webkit-border-radius: 5px;
 }
 
 .ui-popin-ttl {
@@ -341,6 +347,8 @@ div.ui-popin {
 	left: 15px;
 	border: 1px solid black;
 	-moz-border-radius: 5px;
+	border-radius: 5px;
+	-webkit-border-radius: 5px;
 	background-color: #6af218;
 	padding: 3px;
 	font-weight: bold;
@@ -358,6 +366,8 @@ div.ui-popin {
 	padding: 4px;
 	margin: 4px;
 	-moz-border-radius: 5px;
+	border-radius: 5px;
+	-webkit-border-radius: 5px;
 	border: 1px solid #d0d0d0;
 	font-style: italic;
 }
@@ -371,6 +381,8 @@ div.ui-ipa img {
 	border: 2px solid #777777;
 	padding: 5px;
 	-moz-border-radius: 10px;
+	border-radius: 10px;
+	-webkit-border-radius: 10px;
 	background: url(bg-expl.png) repeat-x;
 	color: black;
 }
@@ -693,7 +705,9 @@ div.ui-lui-selected {
 	border-color:#ABADB3 #BFCDD9 #BFCDD9;
 	border-style:solid;
 	border-width:1px;
-	-moz-border-radius: 2px;	
+	-moz-border-radius: 2px;
+	border-radius: 2px;
+	-webkit-border-radius: 2px;
 }
 
 div.ui-lui-selected-ro {
@@ -932,6 +946,8 @@ div:hover.ui-xdt-exp {
 	/*width: 99%;  */
 	vertical-align: top;
 	-moz-border-radius: 5px;
+	border-radius: 5px;
+	-webkit-border-radius: 5px;
 	border: 1px dotted #333333;
 }
 .ui-xdt-nores {
@@ -1555,9 +1571,11 @@ li.ui-tab-err {
 .ui-pmnu {
 	display: none;
 	width: 200px;
-	background-color: #999;
+	background-color: #444;
 	border: 1px dotted black;
 	-moz-border-radius: 5px;
+	border-radius: 5px;
+	-webkit-border-radius: 5px;
 }
 .ui-pmnu-disabled {
 	color: #999;
@@ -1804,7 +1822,9 @@ li.ui-tab-err {
 	left: 100px;
 	width: auto;
 	height: auto;
-	-moz-border-radius: 5px 5px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+	-webkit-border-radius: 5px;
 	border: 1px dotted #999;
 	padding: 15px;
 }
@@ -1839,28 +1859,32 @@ li.ui-tab-err {
 /*** 240_labelselector.frag.css ***/
 /*** LabelSelector component ***/
 .ui-lsel-sel {
-        border-color:#ABADB3 #BFCDD9 #BFCDD9;
-        border-style:solid;
-        border-width:1px;
-        -moz-border-radius: 2px;
-        padding: 4px;
+	border-color:#ABADB3 #BFCDD9 #BFCDD9;
+	border-style:solid;
+	border-width:1px;
+	-moz-border-radius: 5px;
+	border-radius: 5px;
+	-webkit-border-radius: 5px;
+	padding: 4px;
 }
 .ui-lsel {
-        -moz-border-radius: 4px;
-        border: 1px dotted #999;
-        margin: 2px;
-        padding: 2px;
-        background-color: cyan;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+	-webkit-border-radius: 4px;
+	border: 1px dotted #999;
+	margin: 2px;
+	padding: 2px;
+	background-color: cyan;
 }
 .ui-lsel img {
-/*      margin: 5px; */
-        padding-left: 5px;
-        padding-bottom: 2px;
-        vertical-align: bottom;
-        background-color: cyan;
+/*	margin: 5px; */
+	padding-left: 5px;
+	padding-bottom: 2px;
+	vertical-align: bottom;
+	background-color: cyan;
 }
 .ui-lsel-sel input {
-        border: none;
+	border: none;
 }
 /*** 245_bulkupload.frag.css ***/
 /*** BulkUpload component ***/
