--- a/to.etc.domui/src/resources/themes/domui/002_core.frag.css
+++ b/to.etc.domui/src/resources/themes/domui/002_core.frag.css
@@ -22,6 +22,8 @@ input, textarea, select {
 	border-style:solid;
 	border-width:1px;
 	-moz-border-radius: 2px;	
+	border-radius: 2px;	
+	-webkit-border-radius: 2px;	
 }
 
 input, textarea {
