--- a/to.etc.domui/src/resources/themes/domui/040_captionedheader.frag.css
+++ b/to.etc.domui/src/resources/themes/domui/040_captionedheader.frag.css
@@ -10,6 +10,8 @@
 .ui-chdr-ttl {
 	background-color: <%= util.color(header_bg).lighter(0.4) %>;
 	-moz-border-radius: 5px;
+	border-radius: 5px;
+	-webkit-border-radius: 5px;
 	padding: 2px 10px 2px 10px;
 	white-space: nowrap;
 }
