--- a/to.etc.domui/src/resources/themes/domui/055_misc.frag.css
+++ b/to.etc.domui/src/resources/themes/domui/055_misc.frag.css
@@ -11,6 +11,8 @@
 	padding: 4px;
 	margin: 4px;
 	-moz-border-radius: 5px;
+	border-radius: 5px;
+	-webkit-border-radius: 5px;
 	border: 1px solid #d0d0d0;
 	font-style: italic;
 }
@@ -24,6 +26,8 @@ div.ui-ipa img {
 	border: 2px solid #777777;
 	padding: 5px;
 	-moz-border-radius: 10px;
+	border-radius: 10px;
+	-webkit-border-radius: 10px;
 	background: url(bg-expl.png) repeat-x;
 	color: black;
 }
