--- a/to.etc.domui/src/resources/themes/domui/135_expandingtable.frag.css
+++ b/to.etc.domui/src/resources/themes/domui/135_expandingtable.frag.css
@@ -36,6 +36,8 @@ div:hover.ui-xdt-exp {
 	/*width: 99%;  */
 	vertical-align: top;
 	-moz-border-radius: 5px;
+	border-radius: 5px;
+	-webkit-border-radius: 5px;
 	border: 1px dotted #333333;
 }
 .ui-xdt-nores {
